--- a/ValueRecord/Hake.Extension.ValueRecord.csproj
+++ b/ValueRecord/Hake.Extension.ValueRecord.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp1.1;net452</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
