--- a/ValueRecord/Hake.Extension.ValueRecord.csproj
+++ b/ValueRecord/Hake.Extension.ValueRecord.csproj
@@ -4,4 +4,6 @@
     <TargetFrameworks>netcoreapp1.1;net452</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net452|x64'" />
+
 </Project>
