migrate to dotnet core 2.0

--- a/ValueRecord/Hake.Extension.ValueRecord.csproj
+++ b/ValueRecord/Hake.Extension.ValueRecord.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.1;net452</TargetFrameworks>
+    <OutputType>library</OutputType>
+    <TargetFrameworks>netcoreapp2.0;net452</TargetFrameworks>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net452|x64'" />
-
+  
 </Project>
